Added more settings
